# recursive-coder

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  config.yaml  pyproject.toml
eval/: mock_api.py  run_eval.py
experiments/: test_judgment.py  test_split.py  tree_viz.py
prompt_templates/: backtrack.txt  execute.txt  fix.txt  integrate.txt  judge.txt  system.txt
recursive_coder/: __init__.py  __main__.py  agent_loop.py  api_caller.py  cli.py  evaluator.py  executor.py  logger_setup.py  models.py  optimizer.py  persistence.py  processor.py  prompt_builder.py  response_parser.py  tools.py  web_tools.py
tests/: test_evaluator.py  test_executor.py  test_models.py  test_prompt_builder.py  test_response_parser.py  test_tools.py
