[project]
name = "recursive-coder"
version = "0.1.0"
description = "Recursive Task Decomposition AI Coding Framework"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["recursive_coder*"]

[project.scripts]
recursive-coder = "recursive_coder.cli:main"
